[package]
name = "lsarrazios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type= ["staticlib"]
name = "lsarrazios"
path = "src/main.rs"

[dependencies]
spin = "0.5.2"
volatile = "0.2.6"
linked_list_allocator = "^0.10"
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]